# CompressedSensing

./: .gitignore  CMakeLists.txt  Makefile  README.md  res.csv
projection/: CMakeLists.txt
projection/bench/: CMakeLists.txt
projection/bench/src/: benchBasic.cpp
projection/projection/: CMakeLists.txt  DTB.hpp
projection/projection/basic/: bucket.hpp  bucket_filter.hpp  condat.hpp
projection/projection/weighted/: ProjectionBucket.hpp  ProjectionBucketFilter.hpp  ProjectionSort.hpp  ProjectionWSplit.hpp  projection.hpp
projection/test/: CMakeLists.txt
projection/test/src/: testBasic.cpp
solver/: CMakeLists.txt
solver/bench/: CMakeLists.txt
solver/bench/src/: analyze.hpp  benchResults.hpp  benchs.hpp  candes.hpp  lasso.hpp  lq.hpp  main.cpp
solver/solver/: CMakeLists.txt
solver/solver/include/: Solver.hpp  SolverAXB.hpp  SolverAXBProj.hpp  SolverAXBWPLQ.hpp  SolverAXBWPLQFixe.hpp  SolverAXBWeightedProj.hpp  solversAxb.hpp
solver/test/: CMakeLists.txt
src/: Bench.hpp  DTB.hpp  Projection.hpp  ProjectionBucket.hpp  ProjectionBucketFilter.hpp  ProjectionSort.hpp  ProjectionWSplit.hpp  Solver.hpp  SolverAXBWPLQ.hpp  SolverAXBWPLQFixe.hpp  SolverAXBWeightedProj.hpp  Sort.hpp  main.cpp
